# water-mark-remover-cli-

./: .gitignore  Implementation.md  README.md  pyproject.toml
src/videoclean/: __init__.py  __main__.py  cli.py  exceptions.py  region.py
src/videoclean/core/: __init__.py  job.py  pipeline.py
src/videoclean/inpainting/: __init__.py  base.py  frame_inpainter.py
src/videoclean/masks/: __init__.py  manual.py  preview.py
src/videoclean/models/: __init__.py  registry.py
src/videoclean/utils/: __init__.py  device.py  logging.py
src/videoclean/video/: __init__.py  encoder.py  extractor.py  ffmpeg.py  metadata.py  roundtrip.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_preview.py  test_roundtrip.py
tests/unit/: test_device.py  test_ffmpeg.py  test_frame_inpainter.py  test_job_state.py  test_job_workspace.py  test_manual_mask.py  test_metadata.py  test_preview_overlay.py  test_processing_config.py  test_region.py  test_registry.py
