[project]
name = "videoclean"
version = "0.1.0"
description = "CLI tool for removing watermarks from videos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "ffmpeg-python>=0.2.0",
    "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
videoclean = "videoclean.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/videoclean"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
# Prefer CPU wheels for torch on first setup (MPS/CUDA selected at runtime later).
index-strategy = "first-index"
